--- a/assignment/package.json
+++ b/assignment/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://app.myprofunnels.com/v2/preview/Tl29H1uTD7rEdG3TRyGm",
+  "homepage": "http://final.nitaigroup.com/",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
